<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Radiobutton
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="hello_world" >Hello world!
    </string>
    <string name="i_am_a_boy">帅哥</string>
    <string name="i_am_a_girl">美女</string>
    <string name="ask">猜猜我是谁</string>
    <string name="answer">回答</string>
    <string name="clean">清空</string>
    <string name="YES">恭喜！</string>
    <string name="NO">很遗憾！</string>
    <string name="OK">OK</string>
    <string name="right">你答对了！</string>
    <string name="wrong">你答错了</string>
    <string name="anwser_is">正确答案是：</string>

</resources>
