<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent"
              android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask"
        android:id="@+id/ask_and_show"
        android:textSize="25dp"></TextView>
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Radiogroup">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/i_am_a_boy"
            android:id="@+id/radiobutton_boy"></RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_a_girl"
            android:id="@+id/radiobutton_girl"></RadioButton>
        </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/button_answer"
            android:text="@string/answer"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_clean"
            android:text="@string/clean"></Button>
        </LinearLayout>
              </LinearLayout>
